<resources>
    <string name="app_name">Privacy Protector</string>

    <string name="pref_camera_key">camera_switch</string>
    <string name="pref_camera_title">Camera</string>
    <string name="pref_on">Turned ON</string>
    <string name="pref_off">Turned OFF</string>
    <string name="device_admin_label">Privacy Protector</string>
    <string name="device_admin_description"> Access to disable camera functionalities</string>
    <string name="admin_receiver_status_enabled">Device Administration access is granted</string>
    <string name="admin_receiver_status_disabled">Device Administration access is revoked</string>
    <string name="pref_mic_key">mic_switch</string>
    <string name="pref_mic_title">Microphone</string>
    <string name="pref_vol_buttons_key">vol_buttons_switch</string>
    <string name="pref_vol_buttons_title">Volume Buttons (Beta)</string>
    <string name="pref_vol_disabled">Volume Buttons are disabled</string>
</resources>
